tests/errors/e2_packedstruct_T290.pyx
# ticket: t290
# mode: error

packed foo:
    pass

_ERRORS = u"""
4:7: Syntax error in simple statement list
"""
